force-app/main/default/objects/Contact/fields/AFC__c.field-meta.xml
<CustomField>
    <fullName>AFC__c</fullName>
    <label>AFC</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>