force-app/main/default/objects/Contact/fields/Allergy__c.field-meta.xml
<CustomField>
    <fullName>Allergy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allergy</label>
    <type>Checkbox</type>
</CustomField>