force-app/main/default/objects/Contact/fields/Allergy_Information__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Information__c</fullName>
    <label>Allergy Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>