force-app/main/default/objects/Contact/fields/AMH__c.field-meta.xml
<CustomField>
    <fullName>AMH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>One of four cycle checkbox options presented when creating a new cycle.</description>
    <label>AMH</label>
    <type>Checkbox</type>
</CustomField>