force-app/main/default/objects/Contact/fields/AMH_Date__c.field-meta.xml
<CustomField>
    <fullName>AMH_Date__c</fullName>
    <label>AMH Date</label>
    <type>Date</type>
</CustomField>