force-app/main/default/objects/Contact/fields/AMH_Value__c.field-meta.xml
<CustomField>
    <fullName>AMH_Value__c</fullName>
    <label>AMH Value</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>