force-app/main/default/objects/Contact/fields/Amounts_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Amounts_Outstanding__c</fullName>
    <label>Amounts Outstanding</label>
    <summarizedField>Invoice__c.Amount_Outstanding__c</summarizedField>
    <summaryForeignKey>Invoice__c.Patient_Donor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>