force-app/main/default/objects/Contact/fields/Any_Pregnancies_of_20_Weeks_Gestation__c.field-meta.xml
<CustomField>
    <fullName>Any_Pregnancies_of_20_Weeks_Gestation__c</fullName>
    <description>ANZARD LABEL: PREG_20W</description>
    <label>Any Pregnancies of 20+ Weeks Gestation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>