force-app/main/default/objects/Contact/fields/ART_Bloods_Completed__c.field-meta.xml
<CustomField>
    <fullName>ART_Bloods_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ART Bloods Completed DEPRECIATED</label>
    <type>Checkbox</type>
</CustomField>