force-app/main/default/objects/Contact/fields/ART_Bloods_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>ART_Bloods_Completed_Date__c</fullName>
    <label>ART Bloods Completed Date DEPRECIATED</label>
    <type>Date</type>
</CustomField>