force-app/main/default/objects/Contact/fields/Birthdate_Searchable__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Searchable__c</fullName>
    <label>Birthdate Searchable</label>
    <length>10</length>
    <type>Text</type>
</CustomField>