force-app/main/default/objects/Contact/fields/Birthday_Age__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Age__c</fullName>
    <formula>IF(
    ISBLANK(Preferred_Name__c),
    FirstName,
    Preferred_Name__c
) &amp;&quot;, &quot;&amp;TEXT(DAY( Birthdate ))&amp;&quot;/&quot;&amp;TEXT(MONTH( Birthdate ))&amp;&quot;/&quot;&amp;TEXT(YEAR( Birthdate ))&amp;&quot; Age: &quot;&amp;TEXT(FLOOR((TODAY() - Birthdate) / 365.25))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Name, Birthday &amp; Age</label>
    <type>Text</type>
</CustomField>