force-app/main/default/objects/Contact/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <formula>( Weight__c / Height__c /Height__c)*10000</formula>
    <label>BMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>