force-app/main/default/objects/Contact/fields/BMI_Warning__c.field-meta.xml
<CustomField>
    <fullName>BMI_Warning__c</fullName>
    <formula>IF( BMI__c &gt;29.9,True,False)</formula>
    <label>BMI Warning</label>
    <type>Checkbox</type>
</CustomField>