force-app/main/default/objects/Contact/fields/Build__c.field-meta.xml
<CustomField>
    <fullName>Build__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Build</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slim</fullName>
            </value>
            <value>
                <fullName>Athletic</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Heavy Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>