force-app/main/default/objects/Contact/fields/ClickSendSMS__Is_SMS_Sent__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__Is_SMS_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SMS Sent</label>
    <type>Checkbox</type>
</CustomField>