force-app/main/default/objects/Contact/fields/ClickSendSMS__Last_SMS_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__Last_SMS_Sent_On__c</fullName>
    <description>store when last sms have been sent</description>
    <label>Last SMS Sent On</label>
    <type>DateTime</type>
</CustomField>