force-app/main/default/objects/Contact/fields/Complexion__c.field-meta.xml
<CustomField>
    <fullName>Complexion__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Complexion</label>
    <length>30</length>
    <type>Text</type>
</CustomField>