force-app/main/default/objects/Contact/fields/Country_Born_in__c.field-meta.xml
<CustomField>
    <fullName>Country_Born_in__c</fullName>
    <label>Country of Birth</label>
    <length>20</length>
    <type>Text</type>
</CustomField>