force-app/main/default/objects/Contact/fields/Credit_Avalible__c.field-meta.xml
<CustomField>
    <fullName>Credit_Avalible__c</fullName>
    <label>Credit Avalible?</label>
    <summaryFilterItems>
        <field>Invoice__c.Credit_Available__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Patient_Donor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>