force-app/main/default/objects/Contact/fields/Current_Referral__c.field-meta.xml
<CustomField>
    <fullName>Current_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Referral</label>
    <referenceTo>Referral__c</referenceTo>
    <relationshipLabel>Patients &amp; Donors</relationshipLabel>
    <relationshipName>Patients_Donors</relationshipName>
    <type>Lookup</type>
</CustomField>