force-app/main/default/objects/Contact/fields/Current_Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Relationship_Status__c</fullName>
    <description>Relationship Status Picklist intended for donor data collection</description>
    <label>Current Relationship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never Married</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Domestic Relationship</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Registered Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>