force-app/main/default/objects/Contact/fields/Cycling_for_Fertility_Preservation_1__c.field-meta.xml
<CustomField>
    <fullName>Cycling_for_Fertility_Preservation_1__c</fullName>
    <description>ANZARD LABEL: FERT-PRES</description>
    <label>Cycling for Fertility Preservation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>