force-app/main/default/objects/Contact/fields/Cycling_for_Fertility_Preservation__c.field-meta.xml
<CustomField>
    <fullName>Cycling_for_Fertility_Preservation__c</fullName>
    <label>Cycling for Fertility Preservation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ANZARD_1_No_2_Yes</valueSetName>
    </valueSet>
</CustomField>