force-app/main/default/objects/Contact/fields/DAN_Number__c.field-meta.xml
<CustomField>
    <fullName>DAN_Number__c</fullName>
    <label>DAN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>