force-app/main/default/objects/Contact/fields/Date_of_Donation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Donation__c</fullName>
    <description>Intended for Donor Data Collection</description>
    <label>Date of Donation?</label>
    <type>Date</type>
</CustomField>