force-app/main/default/objects/Contact/fields/Date_Photo_ID_Sighted__c.field-meta.xml
<CustomField>
    <fullName>Date_Photo_ID_Sighted__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Date Photo ID Sighted</label>
    <type>Date</type>
</CustomField>