force-app/main/default/objects/Contact/fields/Date_started_trying_to_conceive__c.field-meta.xml
<CustomField>
    <fullName>Date_started_trying_to_conceive__c</fullName>
    <label>Date started trying to conceive</label>
    <type>Date</type>
</CustomField>