force-app/main/default/objects/Contact/fields/Daytime_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Daytime_Phone_Number__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Daytime Phone Number</label>
    <type>Phone</type>
</CustomField>