force-app/main/default/objects/Contact/fields/Donor_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Donor_Birthdate__c</fullName>
    <label>Donor Birthdate</label>
    <type>Date</type>
</CustomField>