force-app/main/default/objects/Contact/fields/Donor_ID_Searchable__c.field-meta.xml
<CustomField>
    <fullName>Donor_ID_Searchable__c</fullName>
    <label>Donor ID Searchable</label>
    <length>30</length>
    <type>Text</type>
</CustomField>