force-app/main/default/objects/Contact/fields/Donor_Lab_Number__c.field-meta.xml
<CustomField>
    <fullName>Donor_Lab_Number__c</fullName>
    <label>Donor Lab ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>