force-app/main/default/objects/Contact/fields/Donor_s_Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Donor_s_Medical_History__c</fullName>
    <label>Donor&apos;s Medical History</label>
    <length>200</length>
    <type>Text</type>
</CustomField>