force-app/main/default/objects/Contact/fields/Donor_Sex_at_Birth__c.field-meta.xml
<CustomField>
    <fullName>Donor_Sex_at_Birth__c</fullName>
    <label>Donor Sex at Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>