force-app/main/default/objects/Contact/fields/DVA__c.field-meta.xml
<CustomField>
    <fullName>DVA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DVA</label>
    <type>Checkbox</type>
</CustomField>