force-app/main/default/objects/Contact/fields/DVA_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>DVA_Card_Type__c</fullName>
    <label>DVA Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>