force-app/main/default/objects/Contact/fields/DVA_Number__c.field-meta.xml
<CustomField>
    <fullName>DVA_Number__c</fullName>
    <label>DVA Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>