force-app/main/default/objects/Contact/fields/Embryo_Glue__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Glue__c</fullName>
    <label>Embryo Glue?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-- None --</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>