force-app/main/default/objects/Contact/fields/Expiry__c.field-meta.xml
<CustomField>
    <fullName>Expiry__c</fullName>
    <label>Expiry</label>
    <length>5</length>
    <type>Text</type>
</CustomField>