force-app/main/default/objects/Contact/fields/Family_Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Family_Medical_History__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Family Medical History</label>
    <length>200</length>
    <type>Text</type>
</CustomField>