force-app/main/default/objects/Contact/fields/Father_s_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Full_Name__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Father&apos;s Full Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>