force-app/main/default/objects/Contact/fields/Filgrastim_PRP__c.field-meta.xml
<CustomField>
    <fullName>Filgrastim_PRP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>One of five checkbox options presented when creating a new cycle.</description>
    <label>Filgrastim/PRP</label>
    <type>Checkbox</type>
</CustomField>