force-app/main/default/objects/Contact/fields/Freeze_All__c.field-meta.xml
<CustomField>
    <fullName>Freeze_All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>One of four cycle checkbox options presented when creating a new cycle.</description>
    <label>Freeze All</label>
    <type>Checkbox</type>
</CustomField>