force-app/main/default/objects/Contact/fields/Fund_Brand_ID__c.field-meta.xml
<CustomField>
    <fullName>Fund_Brand_ID__c</fullName>
    <label>Fund Brand ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>