force-app/main/default/objects/Contact/fields/GCS_Date__c.field-meta.xml
<CustomField>
    <fullName>GCS_Date__c</fullName>
    <label>GCS Date</label>
    <type>Date</type>
</CustomField>