force-app/main/default/objects/Contact/fields/GCS_Status__c.field-meta.xml
<CustomField>
    <fullName>GCS_Status__c</fullName>
    <label>GCS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>