force-app/main/default/objects/Contact/fields/Genetic_Abnormalities__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Abnormalities__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Genetic Abnormalities (Submit Results)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>