force-app/main/default/objects/Contact/fields/Given_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Given_Name_s__c</fullName>
    <label>Given Name(s)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>