force-app/main/default/objects/Contact/fields/Hair_Colour__c.field-meta.xml
<CustomField>
    <fullName>Hair_Colour__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Hair Colour</label>
    <length>20</length>
    <type>Text</type>
</CustomField>