force-app/main/default/objects/Contact/fields/Have_you_Ever_Donated_Before__c.field-meta.xml
<CustomField>
    <fullName>Have_you_Ever_Donated_Before__c</fullName>
    <description>Global Y/N Picklist Intended for Donor Data Collection</description>
    <label>Have you Ever Donated Before?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>