force-app/main/default/objects/Contact/fields/Highest_Level_of_Education_Attained__c.field-meta.xml
<CustomField>
    <fullName>Highest_Level_of_Education_Attained__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Highest Level of Education Attained</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
            <value>
                <fullName>Under-graduate</fullName>
            </value>
            <value>
                <fullName>Post-graduate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>