force-app/main/default/objects/Contact/fields/How_Many_Times__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Times__c</fullName>
    <description>Intended for Donor Data Collection</description>
    <label>How Many Times?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>