force-app/main/default/objects/Contact/fields/ICSI__c.field-meta.xml
<CustomField>
    <fullName>ICSI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>One of four cycle checkbox options presented when creating a new cycle.</description>
    <label>ICSI</label>
    <type>Checkbox</type>
</CustomField>