force-app/main/default/objects/Contact/fields/ID_Checked__c.field-meta.xml
<CustomField>
    <fullName>ID_Checked__c</fullName>
    <label>ID Checked</label>
    <summaryFilterItems>
        <field>Identity_Document__c.ID_Checked__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Identity_Document__c.Patient_or_Donor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>