force-app/main/default/objects/Contact/fields/Import_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Import_Clinic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Import Clinic</label>
    <referenceTo>Clinics__c</referenceTo>
    <relationshipLabel>Patients &amp; Donors</relationshipLabel>
    <relationshipName>Patients_Donors</relationshipName>
    <type>Lookup</type>
</CustomField>