force-app/main/default/objects/Contact/fields/Important_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Important_Additional_Notes__c</fullName>
    <label>Important Additional Notes</label>
    <type>TextArea</type>
</CustomField>