force-app/main/default/objects/Contact/fields/Info_on_Previous_kids_Gender_DOB__c.field-meta.xml
<CustomField>
    <fullName>Info_on_Previous_kids_Gender_DOB__c</fullName>
    <label>Info on Previous kids (#, Gender, D.O.B)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>