force-app/main/default/objects/Contact/fields/Insurance_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Expiry__c</fullName>
    <label>Insurance Expiry</label>
    <length>5</length>
    <type>Text</type>
</CustomField>