force-app/main/default/objects/Contact/fields/Insured__c.field-meta.xml
<CustomField>
    <fullName>Insured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insured?</label>
    <type>Checkbox</type>
</CustomField>