force-app/main/default/objects/Contact/fields/Insured_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Insured_as_Text__c</fullName>
    <formula>IF (Insured_Rollup__c   &gt; 0,&quot;Insured&quot;, &quot;Uninsured&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured as Text</label>
    <type>Text</type>
</CustomField>