force-app/main/default/objects/Contact/fields/Insured_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Insured_Rollup__c</fullName>
    <label>Insured Rollup</label>
    <summaryForeignKey>Health_Fund_and_Insurance__c.Patient_Donor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>