force-app/main/default/objects/Contact/fields/Insuring_Health_Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>Insuring_Health_Fund_Name__c</fullName>
    <label>Insuring Health Fund Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>