force-app/main/default/objects/Contact/fields/Interests_Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Interests_Hobbies__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Interests &amp; Hobbies</label>
    <length>200</length>
    <type>Text</type>
</CustomField>