force-app/main/default/objects/Contact/fields/Invoice_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Outstanding__c</fullName>
    <label>Invoice Outstanding</label>
    <summaryFilterItems>
        <field>Invoice__c.Amount_Outstanding__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Patient_Donor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>