force-app/main/default/objects/Contact/fields/Is_Cause_of_Infertility_Unexplained__c.field-meta.xml
<CustomField>
    <fullName>Is_Cause_of_Infertility_Unexplained__c</fullName>
    <description>ANZARD LABEL: CI_UNEX</description>
    <label>Is Cause of Infertility Unexplained?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>