force-app/main/default/objects/Contact/fields/Is_Infertility_due_to_Other_Factors__c.field-meta.xml
<CustomField>
    <fullName>Is_Infertility_due_to_Other_Factors__c</fullName>
    <description>ANZARD LABEL: CI_OTH</description>
    <label>Is Infertility due to Other Factors?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>