force-app/main/default/objects/Contact/fields/Is_Infertility_due_to_Tubal_Disease__c.field-meta.xml
<CustomField>
    <fullName>Is_Infertility_due_to_Tubal_Disease__c</fullName>
    <description>ANZARD LABEL: CI_TUBE</description>
    <label>Is Infertility due to Tubal Disease?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>