force-app/main/default/objects/Contact/fields/Is_PCOS_Present__c.field-meta.xml
<CustomField>
    <fullName>Is_PCOS_Present__c</fullName>
    <description>ANZARD LABEL: PCOS</description>
    <label>Is PCOS Present</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Unknown</valueSetName>
    </valueSet>
</CustomField>