force-app/main/default/objects/Contact/fields/Is_Test_Patient__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test Patient</label>
    <type>Checkbox</type>
</CustomField>