force-app/main/default/objects/Contact/fields/Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>Issue_Number__c</fullName>
    <label>Issue Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>