force-app/main/default/objects/Contact/fields/IVF__c.field-meta.xml
<CustomField>
    <fullName>IVF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>One of four cycle checkbox options presented when creating a new cycle.</description>
    <label>IVF</label>
    <type>Checkbox</type>
</CustomField>