force-app/main/default/objects/Contact/fields/Licence_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Licence_Passport_Number__c</fullName>
    <label>Licence/Passport Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>