force-app/main/default/objects/Contact/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <formula>MailingStreet&amp;&quot; &quot;&amp; MailingCity&amp;&quot; &quot;&amp; MailingState&amp;&quot; &quot;&amp; MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>