force-app/main/default/objects/Contact/fields/Medicare_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Card_Type__c</fullName>
    <label>Medicare Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green (Standard)</fullName>
            </value>
            <value>
                <fullName>Blue (Interim)</fullName>
            </value>
            <value>
                <fullName>Yellow (Reciprocal)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>