force-app/main/default/objects/Contact/fields/Medicare_Patient_Type__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Patient_Type__c</fullName>
    <label>Medicare Patient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medicare Patient</fullName>
            </value>
            <value>
                <fullName>Non-Medicare Patient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>