force-app/main/default/objects/Contact/fields/Membership_Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Issue_Number__c</fullName>
    <label>Membership Issue Number</label>
    <length>2</length>
    <type>Text</type>
</CustomField>