force-app/main/default/objects/Contact/fields/Mother_s_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Full_Name__c</fullName>
    <description>Field Intended for Donor Data Collection</description>
    <label>Mother&apos;s Full Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>