force-app/main/default/objects/Contact/fields/Mother_s_Maiden_Name_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Maiden_Name_if_applicable__c</fullName>
    <label>Mother&apos;s Maiden Name (if applicable)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>